# Grade_Predictor

./: CMakeLists.txt  main.cpp  readme.md
include/: Assignment.h  Category.h  ConsoleManager.h  FileManager.h  GradePrediction.h
src/: Assignment.cpp  Category.cpp  ConsoleManager.cpp  FileManager.cpp  GradePrediction.cpp
src/Text Files/: categories.json  categories.txt
